fix alignment issues

--- a/src/assets/frontent_files/css/style.css
+++ b/src/assets/frontent_files/css/style.css
@@ -498,7 +498,7 @@ Navbar Area CSS
 }
 
 .tracer-nav .navbar .navbar-nav .nav-item a {
-  color: #f8f6fb;
+  color: #040304;
   font-size: 17px;
   font-weight: 700;
   padding-left: 0;
@@ -956,7 +956,7 @@ Navbar Area CSS
   z-index: 999;
   -webkit-box-shadow: 0 2px 28px 0 rgba(0, 0, 0, 0.09);
           box-shadow: 0 2px 28px 0 rgba(0, 0, 0, 0.09);
-  background-color: #38555d !important ;
+  background-color: #ffffff !important ;
   -webkit-animation: 500ms ease-in-out 0s normal none 1 running fadeInDown;
           animation: 500ms ease-in-out 0s normal none 1 running fadeInDown;
   padding-top: 5px;
@@ -1460,7 +1460,7 @@ Navbar Area CSS
     color: #221638;
   }
   .tracer-responsive-nav .mean-container a.meanmenu-reveal span {
-    background: #f8f6fb;
+    background: #000000;
   }
   .tracer-responsive-nav .logo {
     position: relative;
@@ -1672,6 +1672,7 @@ Main Banner Area CSS
 
 .banner-content {
   margin-top: -50px;
+  margin-left: 13%;
 }
 
 .banner-content h1 {
